[package]
name = "netprobe"
version = "1.0.0"
edition = "2021"
description = "A surgical network diagnostic tool for DevOps and SysAdmins."
authors = ["Sacha <sacha@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/netprobe"

[dependencies]
# CLI Argument Parsing
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP Client (Rustls for better portability than OpenSSL)
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }

# Terminal UI & Formatting
colored = "2.0"

# URL Parsing
url = "2.4"

# Serialization (JSON Support)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"